--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="Images/favicon.webp" />
+    <link rel="icon" href="Images/faviconOm.png" />
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
-    <title>Vinayak Singh | Portfolio</title>
+    <title>Om Lohade | Portfolio</title>
     <meta charset="utf-8" />
-    <meta property="og:title" content="Vinayak Singh | Portfolio">
-    <meta name="keywords" content="Vinayak Singh,Vinayak,Code Vinayak,Portfolio Vinayak Singh,Freelance website developer">
-    <meta property="og:description" content="Looking for a talented freelance website developer? Vinayak Singh has the skills and expertise you need to bring your website vision to life. With a wide range of skills including HTML, CSS, JavaScript, and React, as well as expertise in CMS systems like WordPress and Shopify, Contact Vinayak today to get started. Contact now today to get started on your web development project." name="description">
-    <meta property="og:image:type" content="image/jpg">
-    <meta property="og:image" content="Images/VinayakSingh.webp">
-    <meta name="image" property="og:image" content="Images/VinayakSingh.webp">
+    <meta property="og:title" content="Om Lohade | Portfolio">
+    <meta name="keywords" content="Om Lohade,Portfolio Om Lohade,Developer, Full Stack Developer, GenAi Developer,Backend Developer">
+    <meta property="og:description" content="Om Lohade is a GenAI and full-stack developer skilled in Python, Node.js, and modern web technologies. Portfolio showcasing projects, skills, and contact details.">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image" content="Images/metaImage.png">
+    <meta name="image" property="og:image" content="Images/metaImage.png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
     <meta property="og:type" content="website">
     <meta property="og:type" content="article">
-    <meta property="article:author" content="https://vinayaksingh.com/">
-    <meta property="og:site_name" content="vinayaksingh.com">
+    <meta property="article:author" content="https://omlohade.com/">
+    <meta property="og:site_name" content="omlohade.com">
     <meta property="article:published_time" content="date_time">
     <meta property="og:locale" content="pt_BR">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
